# ia

./: .gitignore  README.md  curso_sap.py  example.py  gemini_ia.py  pyproject.toml  stream_ai.py  transcribe_video.py
composio_folder/: funcoes_proprias_com_composio.py  github.py  planilhas.py  search_words.py  tools.py
contrib/: env.sample
db/0b492be2-f4bc-4c27-9351-0c432309400f/: index_metadata.pickle
files/: gasto.csv  gasto_new.csv  ipca.xls
langchan/: email_qa.py  embedding_with_csv.py  embedding_with_pdf.py  get_data_gastosluxu.py  get_sql.py  ipca.db  ipca.xls  load_ipca.ipynb  main.py  manipule_data_gastosluxu.py  pdf_use_chroma.py  pdf_use_chroma_csv.py  use_pandaai.py
langchan/cursoSAP/: example.py
langchan/cursoSAP/modulo1/: bloco2.py  bloco3.py  bloco4.py  bloco5.py  bloco6.py
langchan/cursoSAP/modulo2/: material.py
langchan/cursoSAP/modulo3/: bloco1.py  bloco2.py  bloco3.py  bloco4.py  bloco5.py  bloco6.py
scraper/: agent_scraper.py  main.py  main2.py
swe_agent/agent/: agent.py
